# rodog

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  rodog_main.c
main/components/: board.c  board.h
main/components/communication/: now_controler.c  now_controler.h  web_page.h  web_server.c  web_server.h
main/components/control/: leg.c  leg.h
main/components/drivers/: icm20948.c  icm20948.h  pca9685.c  pca9685.h
